...
                                </cells>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Q5m-vy-QMh"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="w76-AQ-KnS"/>
                                </connections>
                            </collectionView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter the count" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="6o6-Xc-0ar">
                                <rect key="frame" x="8" y="35" width="238" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="238" id="k51-8J-jTa"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dNk-ly-v7R">
                                <rect key="frame" x="279" y="35" width="80" height="30"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="16"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="submitAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IW1-px-MY0"/>
                                </connections>
                            </button>
...
