//
//  AppConstants.swift
//  cigna_Box
//
//  Created by cccuser on 08/06/17.
//  Copyright © 2017 cccuser. All rights reserved.
//

import Foundation
struct AppConstants {
  
  
  static let maxCount = 15
  static let countlimitMessage = "Enter a count less than or equal to %d"
  static let emptyerrorMessage = "Count cannot be empty!!"
  
}
