...
  
  @IBAction func submitAction(_ sender: Any) {
    if countTextfield.text == "" {
      boxCount = 0
      boxCollectionView.reloadData()
      let alertController = UIAlertController(title: "", message:AppConstants.emptyerrorMessage, preferredStyle: UIAlertControllerStyle.alert)
      let okAction = UIAlertAction(title: "OK", style: UIAlertActionStyle.default) {
        (result : UIAlertAction) -> Void in
        alertController.dismiss(animated: true, completion: nil)
      }
      alertController.addAction(okAction)
      self.present(alertController, animated: true, completion: nil)
    }
...
